--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -29,6 +29,7 @@
   &__toggle {
     z-index: 2;
     cursor: pointer;
+    padding-bottom: 4px;
 
     span {
       display: block;
